<resources>
  <string name="app_name">FirstApp</string>

  <string name="txt_test">hello</string>
  <string name="btn_click">Click Me!</string>
  <string name="img_change">Change Image</string>

  <string name="fb">facebook</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="show_password">show password</string>
  <string name="save_login">save login</string>
  <string name="login">login</string>
  <string name="cancel">cancel</string>

  <string name="txt_login_btm">Need an account?\nSign in using your phone</string>


  <string name="drawer_open">Open</string>
  <string name="drawer_close">Close</string>


  <string-array name="list_main">
    <item>Button Test</item>
    <item>Image View Test</item>
    <item>Relative Layout Test</item>
    <item>Floating Button Test</item>
    <item>Fragment Test</item>
    <item>Fragment Communication</item>
    <item>Tabs</item>
    <item>Passing Data Parcelable</item>
    <item>Log Test</item>
    <item>Shared Preferences</item>
    <item>Swipe Layout Test</item>
    <item>Event Bus Test</item>
    <item>Http Test</item>
    <item>RetroFit Test</item>
    <item>Service Test</item>
    <item>BroadCastReceiver Test</item>
    <item>Recycler state test</item>
    <item>Realm Test</item>
    <item>Rx Test</item>
    <item>Custom View Test</item>
    <item>Compound View Test</item>
    <item>Custom View group</item>
    <item>Dagger Test</item>
    <item>Constraint Layout Test</item>
    <item>Crash Test</item>
    <item>list18</item>
  </string-array>
  <string name="title_activity_maps">Map</string>

</resources>
