<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B5998"
    >

  <LinearLayout
      android:id="@+id/wrapper_main_top"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:orientation="vertical"
      >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fb"
        style="@style/txt_title"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        style="@style/txt_login"
        />
    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_txt_login"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/txt_login"
        />
    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/edit_txt_login"
        />
    <Button
        android:id="@+id/btn_showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x1"
        android:text="@string/show_password"
        />

    <CheckBox
        android:id="@+id/chk_saveLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x1"
        android:checked="true"
        android:text="@string/save_login"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:id="@+id/btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x2"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/btn_login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/login"
          />
      <Button
          android:id="@+id/btn_cancel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/x1"
          android:text="@string/cancel"
          />
    </LinearLayout>
  </LinearLayout>


  <TextView
      android:id="@+id/info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentStart="true"
      android:gravity="center_horizontal"
      android:text="@string/txt_login_btm"
      style="@style/txt_login_btm"
      />

</RelativeLayout>